--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </center>
 
     <main class="main">
-        <div class="container">SHAKE
+        <div class="container">
             <div class="leftside" style="">
                 <h1 class="title" style="text-transform: uppercase;"></h1>
 
@@ -45,10 +45,6 @@
                     <span style="font-family:lucida sans unicode,lucida grande,sans-serif;"><strong>Join the
                             giveaway</strong></span>
                 </h1>
-
-
-
-
                 <p class="subtitle" style:"color:#fff">SpaceSwap believe that blockchain and SpaceSwap coin will make
                     the
                     world more fair.
