--- a/index.html
+++ b/index.html
@@ -164,9 +164,7 @@
                             <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>20 SpaceSwap + = 0.02
                                     SpaceSwap
                                     BONUS</span></li>
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>25 SpaceSwap + = 0.03git commit
-                                    -m
-                                    SpaceSwap
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>25 SpaceSwap + = 0.03 SpaceSwap
                                     BONUS</span></li>
                             <li style="font-size: 12pt; color: #fff;padding: 5px;">
                                 <spa5>35 SpaceSwap + = 0.04
